--- a/project-react/src/App.css
+++ b/project-react/src/App.css
@@ -1,13 +1,12 @@
-.container{
+.App{
     display: flex;
     flex-direction: column;
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
 }
-
 .secao-limitada{
-    width: 10%;
-    display: flex;
-    background-color: burlywood;
+    width: 70%;
+    margin: 0px auto;
+    text-align: center;
 }
