--- a/project-react/src/componentes/Produtos/style.css
+++ b/project-react/src/componentes/Produtos/style.css
@@ -22,6 +22,14 @@
     width: 50%;
     height: 40%;
 }
-.lista{
-    text-align: center;
+.section-produtos ul {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+.section-produtos li {
+    text-align: left;
+    margin: 5px;
 }
