--- a/project-react/src/componentes/Sobre/style.css
+++ b/project-react/src/componentes/Sobre/style.css
@@ -2,24 +2,24 @@
     background-color: #fcf4fc;
     padding: 40px 0px;
 }
-.section-cards{
-    width: 100%;
-    height: 65vh;
+.section-cards{ 
+    margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
 }
-.section-cards .cards, img{
-    border: 1px solid gray;
+.section-cards .cards,.section-cards img{
+    border: 1px solid #a2adad;
+    width: 50%;
+    max-height: 300px;
 }
 .section-cards .cards{
     background-color: white;
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    width: 49.8%;
-    height: 49.5%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 25px;
 }
 .section-cards img{
-    width: 49.7%;
-    height: 49.5%;
+    object-fit: cover;
 }
