--- a/project-react/src/componentes/Capa/style.css
+++ b/project-react/src/componentes/Capa/style.css
@@ -1,4 +1,4 @@
-.section-Capa{
+.secao-Capa{
     background-image: url('/public/assets/capa.png');
     background-repeat: no-repeat;   
     background-size: cover;
@@ -14,4 +14,32 @@
     width:40%;
     font-size: 23px;
     text-align: left;
+}
+
+@media screen and (max-width:550px){
+    .secao-Capa{
+        background-position:right;
+    }
+    .conteudo-Capa{
+        margin: 20px;
+        width: 60%;
+        font-size: 26px;
+    }
+    .sombra{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: rgb(0, 0, 0,0.5);
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width:551px) and (max-width:768px){
+    .secao-Capa{
+        background-position: center;
+    }
+    .conteudo-Capa{
+        width: 40%;
+    }
 }
