--- a/project-react/src/componentes/Contato/style.css
+++ b/project-react/src/componentes/Contato/style.css
@@ -23,3 +23,14 @@
     width: 20px;
     height: 20px;
 }
+
+@media screen and (max-width:550px){
+    .redecontato{
+        display: flex;
+        flex-direction: column;
+    }
+    .contatos{
+        width:40%;
+        align-items: center;
+    }
+}
