--- a/project-react/src/componentes/Footer/style.css
+++ b/project-react/src/componentes/Footer/style.css
@@ -4,3 +4,9 @@ footer{
     color: #ADADAD;
     padding: 10px 0px;
 }
+
+@media screen and (max-width:550px){
+    footer{
+        padding: 30px 0px;
+    }
+}
