--- a/project-react/src/componentes/Sobre/style.css
+++ b/project-react/src/componentes/Sobre/style.css
@@ -23,3 +23,23 @@
 .section-cards img{
     object-fit: cover;
 }
+
+@media screen and (max-width:550px){
+    .section-sobre{
+        text-align: center;
+    }
+    
+    .section-cards{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    
+    .section-cards img, .section-cards .cards{
+        width: 95%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+}
